Remove Next.js build files and apply gitignore

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,7 +23,7 @@ frontend/.env.*
 # Next.js
 frontend/.next/
 frontend/out/
-
+frontend/.next/
 # ===============================
 # Backend (Node / Express / Nest)
 # ===============================
